--- a/examples/2-orgs-policy-any/values/orderer-ca.yaml
+++ b/examples/2-orgs-policy-any/values/orderer-ca.yaml
@@ -39,7 +39,11 @@ enrollments:
   creds:
   - { name: admin, secret: adminpwd, options: "--id.attrs admin=true:ecert"}
   - { name: user, secret: pwd, options: "--id.type orderer"}
-  csrHost: orderer1-hlf-ord.orderer
+  - { name: orderer1, secret: pwd, options: "--id.type orderer"}
+  - { name: orderer2, secret: pwd, options: "--id.type orderer"}
+  - { name: orderer3, secret: pwd, options: "--id.type orderer"}
+  # csrHost: orderer1-hlf-ord.orderer
+  csrHost: "*.orderer"
 
 toolbox:
   enabled: false
