--- a/charts/hlf-k8s/templates/deployment-chaincode-operator.yaml
+++ b/charts/hlf-k8s/templates/deployment-chaincode-operator.yaml
@@ -91,8 +91,8 @@ spec:
                   echo "{
                   \"address\": \"{{ .address }}:{{ .port }}\",
                   \"dial_timeout\": \"10s\",
-                  \"tls_required\": true,
-                  \"client_auth_required\": true,
+                  \"tls_required\": false,
+                  \"client_auth_required\": false,
                   \"client_key\": \"$(awk 'NF {sub(/\r/, ""); printf "%s\\n",$0;}' /var/hyperledger/tls/client/pair/tls.key)\",
                   \"client_cert\": \"$(awk 'NF {sub(/\r/, ""); printf "%s\\n",$0;}' /var/hyperledger/tls/client/pair/tls.crt)\",
                   \"root_cert\": \"$(awk 'NF {sub(/\r/, ""); printf "%s\\n",$0;}' /var/hyperledger/tls/client/cert/cacert.pem)\"
