--- a/examples/2-orgs-policy-any/values/org-1-peer-1-ca.yaml
+++ b/examples/2-orgs-policy-any/values/org-1-peer-1-ca.yaml
@@ -129,8 +129,10 @@ enrollments:
   creds:
     - { name: admin, secret: adminpwd, options: "--id.attrs hf.Registrar.Roles=client,hf.Registrar.Attributes=*,hf.Revoker=true,hf.GenCRL=true,admin=true:ecert,abac.init=true:ecert"}
     - { name: user, secret: pwd, options: "--id.type peer"}
+    - { name: peer1, secret: pwd, options: "--id.type peer"}
   # csrHost is set for peer and chaincodes communications
-  csrHost: org-1-peer-1-hlf-peer.org-1,org-1-peer-1-hlf-k8s-chaincode-mycc.org-1,org-1-peer-1-hlf-k8s-chaincode-yourcc.org-1
+  # csrHost: "org-1-peer-1-hlf-peer.org-1,org-1-peer-1-hlf-k8s-chaincode-basic.org-1"
+  csrHost: "*.org-1"
 
 
 toolbox:
